@@ -174,6 +174,7 @@ extern "C"
 #define MHD_HTTP_HEADER_CONTENT_MD5 "Content-MD5"
 #define MHD_HTTP_HEADER_CONTENT_RANGE "Content-Range"
 #define MHD_HTTP_HEADER_CONTENT_TYPE "Content-Type"
+#define MHD_HTTP_HEADER_COOKIE "Cookie"
 #define MHD_HTTP_HEADER_DATE "Date"
 #define MHD_HTTP_HEADER_ETAG "ETag"
 #define MHD_HTTP_HEADER_EXPECT "Expect"
@@ -195,6 +196,8 @@ extern "C"
 #define MHD_HTTP_HEADER_REFERER "Referer"
 #define MHD_HTTP_HEADER_RETRY_AFTER "Retry-After"
 #define MHD_HTTP_HEADER_SERVER "Server"
+#define MHD_HTTP_HEADER_SET_COOKIE "Set-Cookie"
+#define MHD_HTTP_HEADER_SET_COOKIE2 "Set-Cookie2"
 #define MHD_HTTP_HEADER_TE "TE"
 #define MHD_HTTP_HEADER_TRAILER "Trailer"
 #define MHD_HTTP_HEADER_TRANSFER_ENCODING "Transfer-Encoding"
