@@ -1,3 +1,6 @@
+Mon Oct  5 21:17:26 CEST 2009
+	Adding "COOKIE" header string #defines. -CG
+
 Mon Oct  5 08:29:06 CEST 2009
 	Documenting default values. -CG
 
